src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  background-color: #F1F5F9;
}

html.dark {
   background-color: #141921;
}

.drag-over {
  border:dashed rgb(60 60 60) 5px;
  margin: -15px;
  padding: 10px;
}

.navigation-icon,
.date,
.days-of-week,
.priority {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.selected-date {
  border: 1px white solid;
}

.material-icons.lg-14 {
  font-size: 14px;
}

.material-icons.lg-18 {
  font-size: 18px;
}

.material-icons.lg-24 {
  font-size: 24px;
}

.material-icons.lg-36 {
  font-size: 36px;
}

.material-icons.lg-48 {
  font-size: 48px;
}

